[PSA-36 updated kubernetes probes in kernel module]
Conflicts:
	deployment/sandbox-v2/helm/charts/kernel/templates/audit-dep.yaml
	deployment/sandbox-v2/helm/charts/kernel/templates/auth-dep.yaml
	deployment/sandbox-v2/helm/charts/kernel/templates/idgen-dep.yaml
	deployment/sandbox-v2/helm/charts/kernel/templates/key-dep.yaml
	deployment/sandbox-v2/helm/charts/kernel/templates/masterdata-dep.yaml
	deployment/sandbox-v2/helm/charts/kernel/templates/notifier-dep.yaml
	deployment/sandbox-v2/helm/charts/kernel/templates/otp-dep.yaml
	deployment/sandbox-v2/helm/charts/kernel/templates/prid-dep.yaml
	deployment/sandbox-v2/helm/charts/kernel/templates/rid-dep.yaml
	deployment/sandbox-v2/helm/charts/kernel/templates/sync-dep.yaml

--- a/deployment/sandbox-v2/helm/charts/kernel/templates/sync-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/templates/sync-dep.yaml
@@ -51,13 +51,19 @@ spec:
         - containerPort: {{ .Values.services.sync.containerPort }}
         readinessProbe:
           httpGet:
-            path: {{ .Values.services.sync.healthUrl }} 
-            port: {{ .Values.services.sync.containerPort }} 
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }} 
-#        livenessProbe:
-#          httpGet:
-#            path: {{ .Values.services.sync.healthUrl }} 
-#            port: {{ .Values.services.sync.containerPort }} 
-#          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-#          periodSeconds: {{ .Values.probe.period }}
+            path: {{ .Values.services.sync.healthUrl }}
+            port: {{ .Values.services.sync.ports.containerPort }}
+          periodSeconds: {{ .Values.probe.period }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        livenessProbe:
+          httpGet:
+            path: {{ .Values.services.sync.healthUrl }}
+            port: {{ .Values.services.sync.ports.containerPort }}
+          periodSeconds: {{ .Values.probe.livenessPeriod }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        startupProbe:
+          httpGet:
+            path: {{ .Values.services.sync.healthUrl }}
+            port: {{ .Values.services.sync.ports.containerPort }}
+          failureThreshold: {{ .Values.probe.failureThreshold }}
+          periodSeconds: {{ .Values.probe.startupPeriod }}
