--- a/deployment/sandbox-v2/helm/charts/kernel/templates/audit-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/templates/audit-dep.yaml
@@ -51,13 +51,19 @@ spec:
         - containerPort: {{ .Values.services.audit.containerPort }}
         readinessProbe:
           httpGet:
-            path: {{ .Values.services.audit.healthUrl }} 
-            port: {{ .Values.services.audit.containerPort }} 
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }} 
-   #     livenessProbe:
-   #       httpGet:
-   #         path: {{ .Values.services.audit.healthUrl }} 
-   #         port: {{ .Values.services.audit.containerPort }} 
-   #       initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-   #       periodSeconds: {{ .Values.probe.period }}
+            path: {{ .Values.services.audit.healthUrl }}
+            port: {{ .Values.services.audit.ports.containerPort }}
+          periodSeconds: {{ .Values.probe.period }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        livenessProbe:
+          httpGet:
+            path: {{ .Values.services.audit.healthUrl }}
+            port: {{ .Values.services.audit.ports.containerPort }}
+          periodSeconds: {{ .Values.probe.livenessPeriod }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        startupProbe:
+          httpGet:
+            path: {{ .Values.services.audit.healthUrl }}
+            port: {{ .Values.services.audit.ports.containerPort }}
+          failureThreshold: {{ .Values.probe.failureThreshold }}
+          periodSeconds: {{ .Values.probe.startupPeriod }}
