[PSA-36] updated kubernetes probes in datashare module
Conflicts:
	deployment/sandbox-v2/helm/charts/datashare/templates/datashare-dep.yaml

--- a/deployment/sandbox-v2/helm/charts/datashare/templates/ingress.yaml
+++ b/deployment/sandbox-v2/helm/charts/datashare/templates/ingress.yaml
@@ -18,7 +18,7 @@ spec:
           service: 
             name: {{ $service.serviceName }}
             port: 
-              number: {{ $service.servicePort }} 
+              number: {{ $service.ports.servicePort }} 
         {{ end }}
       {{- end }}
 
