--- a/deployment/sandbox-v2/helm/charts/packetmanager/templates/packetmanager-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/packetmanager/templates/packetmanager-dep.yaml
@@ -62,16 +62,22 @@ spec:
           containerPort: {{ .Values.services.packet.ports.containerPort }}
         - name: hazelcast-port
           containerPort: {{ .Values.services.packet.ports.hazelcastPort }}
-
         readinessProbe:
           httpGet:
-            path: {{ .Values.services.packet.healthUrl }} 
-            port: {{ .Values.services.packet.ports.containerPort }} 
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }} 
+            path: {{ .Values.services.packet.healthUrl }}
+            port: {{ .Values.services.packet.ports.containerPort }}
+          periodSeconds: {{ .Values.probe.period }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
         livenessProbe:
           httpGet:
             path: {{ .Values.services.packet.healthUrl }}
             port: {{ .Values.services.packet.ports.containerPort }}
-          initialDelaySeconds: {{ .Values.probe.initialLivenessDelay }}
-          periodSeconds: {{ .Values.probe.period }}
+          periodSeconds: {{ .Values.probe.livenessPeriod }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        startupProbe:
+          httpGet:
+            path: {{ .Values.services.packet.healthUrl }}
+            port: {{ .Values.services.packet.ports.containerPort }}
+          failureThreshold: {{ .Values.probe.failureThreshold }}
+          periodSeconds: {{ .Values.probe.startupPeriod }}
+
