--- a/deployment/sandbox-v2/helm/charts/prereg/templates/booking-dep.yml
+++ b/deployment/sandbox-v2/helm/charts/prereg/templates/booking-dep.yml
@@ -46,9 +46,22 @@ spec:
         - name: mosipbox_public_url
           value: {{ .Values.sitePublicUrl }}
         ports:
-        - containerPort: {{ .Values.services.booking.containerPort }}
-
-
+        - containerPort: {{ .Values.services.booking.ports.containerPort }}
         readinessProbe:
-          tcpSocket:
-            port: {{ .Values.services.booking.containerPort }}
+          httpGet:
+            path: {{ .Values.services.booking.healthUrl }}
+            port: {{ .Values.services.booking.ports.containerPort }}
+          periodSeconds: {{ .Values.probe.period }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        livenessProbe:
+          httpGet:
+            path: {{ .Values.services.booking.healthUrl }}
+            port: {{ .Values.services.booking.ports.containerPort }}
+          periodSeconds: {{ .Values.probe.livenessPeriod }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        startupProbe:
+          httpGet:
+            path: {{ .Values.services.booking.healthUrl }}
+            port: {{ .Values.services.booking.ports.containerPort }}
+          failureThreshold: {{ .Values.probe.failureThreshold }}
+          periodSeconds: {{ .Values.probe.startupPeriod }}
