--- a/deployment/sandbox-v2/helm/charts/prereg/templates/booking-dep.yml
+++ b/deployment/sandbox-v2/helm/charts/prereg/templates/booking-dep.yml
@@ -49,8 +49,22 @@ spec:
           value: {{ $podconfig.java_opts }}
         ports:
         - containerPort: {{ .Values.services.booking.ports.containerPort }}
-
-
         readinessProbe:
-          tcpSocket:
+          httpGet:
+            path: {{ .Values.services.booking.healthUrl }}
             port: {{ .Values.services.booking.ports.containerPort }}
+          periodSeconds: {{ .Values.probe.period }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        livenessProbe:
+          httpGet:
+            path: {{ .Values.services.booking.healthUrl }}
+            port: {{ .Values.services.booking.ports.containerPort }}
+          periodSeconds: {{ .Values.probe.livenessPeriod }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        startupProbe:
+          httpGet:
+            path: {{ .Values.services.booking.healthUrl }}
+            port: {{ .Values.services.booking.ports.containerPort }}
+          failureThreshold: {{ .Values.probe.failureThreshold }}
+          periodSeconds: {{ .Values.probe.startupPeriod }}
+
