[PSA-36] updated kubernetes probes in prereg module
Conflicts:
	deployment/sandbox-v2/helm/charts/prereg/templates/application-dep.yaml
	deployment/sandbox-v2/helm/charts/prereg/templates/batch-dep.yaml
	deployment/sandbox-v2/helm/charts/prereg/templates/booking-dep.yml
	deployment/sandbox-v2/helm/charts/prereg/templates/datasync-dep.yaml
	deployment/sandbox-v2/helm/charts/prereg/templates/ui-dep.yaml

--- a/deployment/sandbox-v2/helm/charts/prereg/templates/captcha-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/prereg/templates/captcha-dep.yaml
@@ -47,14 +47,19 @@ spec:
           value: {{ $podconfig.java_opts }}
         ports:
         - containerPort: {{ .Values.services.captcha.containerPort }}
-
-        readinessProbe:  #TODO: Since no actuator, we watch tcp port. Is there an actuator?
-          tcpSocket:
-            port: {{ .Values.services.captcha.containerPort }}
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }} 
-   #     livenessProbe:
-   #       tcpSocket:
-   #         port: {{ .Values.services.captcha.containerPort }}
-   #       initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-   #       periodSeconds: {{ .Values.probe.period }} 
+            path: {{ .Values.services.captcha.healthUrl }}
+            port: {{ .Values.services.captcha.ports.containerPort }}
+          periodSeconds: {{ .Values.probe.period }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        livenessProbe:
+          httpGet:
+            path: {{ .Values.services.captcha.healthUrl }}
+            port: {{ .Values.services.captcha.ports.containerPort }}
+          periodSeconds: {{ .Values.probe.livenessPeriod }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        startupProbe:
+          httpGet:
+            path: {{ .Values.services.captcha.healthUrl }}
+            port: {{ .Values.services.captcha.ports.containerPort }}
+          failureThreshold: {{ .Values.probe.failureThreshold }}
+          periodSeconds: {{ .Values.probe.startupPeriod }}
