--- a/deployment/sandbox-v2/helm/charts/prereg/templates/ui-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/prereg/templates/ui-dep.yaml
@@ -32,17 +32,7 @@ spec:
         - name: JDK_JAVA_OPTIONS
           value: {{ $podconfig.java_opts }}
         ports:
-        - containerPort: {{ .Values.services.ui.containerPort }} 
-        readinessProbe:
-          tcpSocket:
-            port: {{ .Values.services.ui.containerPort }}  # All defaults used
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }} 
-  #      livenessProbe:
-  #        tcpSocket:
-  #          port: {{ .Values.services.ui.containerPort }}  # All defaults used
-  #        initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-  #       periodSeconds: {{ .Values.probe.period }} 
+        - containerPort: {{ .Values.services.ui.ports.containerPort }} 
         volumeMounts:
             - name: ui-config 
               mountPath: /usr/share/nginx/html/assets/config.json
@@ -53,3 +43,22 @@ spec:
         - name: ui-config
           configMap:
             name: {{ .Values.services.ui.configName }}
+        readinessProbe:
+          httpGet:
+            path: {{ .Values.services.auth.healthUrl }}
+            port: {{ .Values.services.auth.ports.containerPort }}
+          periodSeconds: {{ .Values.probe.period }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        livenessProbe:
+          httpGet:
+            path: {{ .Values.services.auth.healthUrl }}
+            port: {{ .Values.services.auth.ports.containerPort }}
+          periodSeconds: {{ .Values.probe.livenessPeriod }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        startupProbe:
+          httpGet:
+            path: {{ .Values.services.auth.healthUrl }}
+            port: {{ .Values.services.auth.ports.containerPort }}
+          failureThreshold: {{ .Values.probe.failureThreshold }}
+          periodSeconds: {{ .Values.probe.startupPeriod }}
+
