--- a/deployment/sandbox-v2/helm/charts/prereg/templates/ui-svc.yaml
+++ b/deployment/sandbox-v2/helm/charts/prereg/templates/ui-svc.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: default
 spec:
   ports:
-    - port: {{ .Values.services.ui.servicePort }}
-      targetPort: {{ .Values.services.ui.containerPort }}
+    - port: {{ .Values.services.ui.ports.servicePort }}
+      targetPort: {{ .Values.services.ui.ports.containerPort }}
   selector:
     app: {{ .Values.services.ui.serviceName }}
