commented out probes from idgen and pridgen

--- a/deployment/sandbox-v2/helm/charts/kernel/templates/idgen-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/templates/idgen-dep.yaml
@@ -51,22 +51,22 @@ spec:
           value: {{ $podconfig.java_opts }}
         ports:
         - containerPort: {{ .Values.services.idgen.ports.containerPort }}
-        readinessProbe:
-          httpGet:
-            path: {{ .Values.services.idgen.healthUrl }}
-            port: {{ .Values.services.idgen.ports.containerPort }}
-          periodSeconds: {{ .Values.probe.period }}
-          timeoutSeconds: {{ .Values.probe.timeout }}
-        livenessProbe:
-          httpGet:
-            path: {{ .Values.services.idgen.healthUrl }}
-            port: {{ .Values.services.idgen.ports.containerPort }}
-          periodSeconds: {{ .Values.probe.livenessPeriod }}
-          timeoutSeconds: {{ .Values.probe.timeout }}
-        startupProbe:
-          httpGet:
-            path: {{ .Values.services.idgen.healthUrl }}
-            port: {{ .Values.services.idgen.ports.containerPort }}
-          failureThreshold: {{ .Values.probe.failureThreshold }}
-          periodSeconds: {{ .Values.probe.startupPeriod }}
+#        readinessProbe:
+#          httpGet:
+#            path: {{ .Values.services.idgen.healthUrl }}
+#            port: {{ .Values.services.idgen.ports.containerPort }}
+#          periodSeconds: {{ .Values.probe.period }}
+#          timeoutSeconds: {{ .Values.probe.timeout }}
+#        livenessProbe:
+#          httpGet:
+#            path: {{ .Values.services.idgen.healthUrl }}
+#            port: {{ .Values.services.idgen.ports.containerPort }}
+#          periodSeconds: {{ .Values.probe.livenessPeriod }}
+#          timeoutSeconds: {{ .Values.probe.timeout }}
+#        startupProbe:
+#          httpGet:
+#            path: {{ .Values.services.idgen.healthUrl }}
+#            port: {{ .Values.services.idgen.ports.containerPort }}
+#          failureThreshold: {{ .Values.probe.failureThreshold }}
+#          periodSeconds: {{ .Values.probe.startupPeriod }}
 
