added probes and updated pms module

--- a/deployment/sandbox-v2/helm/charts/pms/templates/ui-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/pms/templates/ui-dep.yaml
@@ -27,14 +27,4 @@ spec:
         image: {{ .Values.services.ui.dockerImage  }}
         imagePullPolicy: {{ .Values.imagePullPolicy }} 
         ports:
-        - containerPort: {{ .Values.services.ui.ports.containerPorts }} 
-        readinessProbe:
-          tcpSocket:
-            port: {{ .Values.services.ui.ports.containerPorts }}  # All defaults used
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }} 
-        livenessProbe:
-          tcpSocket:
-            port: {{ .Values.services.ui.ports.containerPorts }}  # All defaults used
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }} 
+        - containerPort: {{ .Values.services.ui.ports.containerPort }} 
