--- a/deployment/sandbox-v2/helm/charts/pms/templates/ui-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/pms/templates/ui-dep.yaml
@@ -27,24 +27,4 @@ spec:
         image: {{ .Values.services.ui.dockerImage  }}
         imagePullPolicy: {{ .Values.imagePullPolicy }} 
         ports:
-        - containerPort: {{ .Values.services.ui.containerPort }} 
-        readinessProbe:
-          tcpSocket:
-            port: {{ .Values.services.ui.containerPort }}  # All defaults used
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }} 
-        livenessProbe:
-          tcpSocket:
-            port: {{ .Values.services.ui.containerPort }}  # All defaults used
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }} 
-        volumeMounts:
-          - name: ui-config
-            mountPath: /usr/share/nginx/html/assets/config.json
-            # The above path is fixed in Dockerfile
-            subPath: config.json #TODO: subPath is needed.  Check why
-            # The config map gets mounted like files where key=file, value=file contents
-      volumes:
-        - name: ui-config
-          configMap:
-            name: {{ .Values.services.ui.configName }}
+        - containerPort: {{ .Values.services.ui.ports.containerPort }} 
