--- a/deployment/sandbox-v2/helm/charts/mock-abis/templates/dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/mock-abis/templates/dep.yaml
@@ -47,17 +47,22 @@ spec:
           value: {{ .Values.isGlowroot }} 
         ports:
         - containerPort: {{ .Values.services.mockabis.ports.containerPort }}
-
         readinessProbe:
           httpGet:
-            path: {{ .Values.services.mockabis.healthUrl }} 
-            port: {{ .Values.services.mockabis.ports.containerPort }} 
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }} 
-  #      livenessProbe:
-  #        httpGet:
-  #          path: {{ .Values.services.mockabis.healthUrl }} 
-  #          port: {{ .Values.services.mockabis.ports.containerPort }} 
-  #        initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-  #        periodSeconds: {{ .Values.probe.period }}
-  #
+            path: {{ .Values.services.mockabis.healthUrl }}
+            port: {{ .Values.services.mockabis.ports.containerPort }}
+          periodSeconds: {{ .Values.probe.period }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        livenessProbe:
+          httpGet:
+            path: {{ .Values.services.mockabis.healthUrl }}
+            port: {{ .Values.services.mockabis.ports.containerPort }}
+          periodSeconds: {{ .Values.probe.livenessPeriod }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        startupProbe:
+          httpGet:
+            path: {{ .Values.services.mockabis.healthUrl }}
+            port: {{ .Values.services.mockabis.ports.containerPort }}
+          failureThreshold: {{ .Values.probe.failureThreshold }}
+          periodSeconds: {{ .Values.probe.startupPeriod }}
+
