--- a/deployment/sandbox-v2/helm/charts/regproc/templates/abismid-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/abismid-dep.yaml
@@ -55,16 +55,22 @@ spec:
           containerPort: {{ .Values.services.abismid.ports.hazelcastPort }}
         - name: verticle-port
           containerPort: {{ .Values.services.abismid.ports.containerPort }}
-
-#        readinessProbe:  # TODO: Disabled as probe is not working.
+#        readinessProbe:
 #          httpGet:
-#            path: {{ .Values.services.abismid.healthUrl }} 
-#            port: {{ .Values.services.abismid.ports.containerPort }} 
-#          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-#          periodSeconds: {{ .Values.probe.period }} 
+#            path: {{ .Values.services.abismid.healthUrl }}
+#            port: {{ .Values.services.abismid.ports.containerPort }}
+#          periodSeconds: {{ .Values.probe.period }}
+#          timeoutSeconds: {{ .Values.probe.timeout }}
 #        livenessProbe:
 #          httpGet:
-#            path: {{ .Values.services.abismid.healthUrl }} 
-#            port: {{ .Values.services.abismid.ports.containerPort }} 
-#          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-#          periodSeconds: {{ .Values.probe.period }} 
+#            path: {{ .Values.services.abismid.healthUrl }}
+#            port: {{ .Values.services.abismid.ports.containerPort }}
+#          periodSeconds: {{ .Values.probe.livenessPeriod }}
+#          timeoutSeconds: {{ .Values.probe.timeout }}
+#        startupProbe:
+#          httpGet:
+#            path: {{ .Values.services.abismid.healthUrl }}
+#            port: {{ .Values.services.abismid.ports.containerPort }}
+#          failureThreshold: {{ .Values.probe.failureThreshold }}
+#          periodSeconds: {{ .Values.probe.startupPeriod }}
+
