--- a/deployment/sandbox-v2/helm/charts/regproc/templates/eis-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/eis-dep.yaml
@@ -49,17 +49,22 @@ spec:
         ports:
         - name: verticle-port
           containerPort: {{ .Values.services.eis.ports.containerPort }}
-
         readinessProbe:
           httpGet:
-            path: {{ .Values.services.eis.healthUrl }} 
-            port: {{ .Values.services.eis.ports.containerPort }} 
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }} 
-#       livenessProbe:
-#          httpGet:
-#           path: {{ .Values.services.eis.healthUrl }} 
-#           port: {{ .Values.services.eis.ports.containerPort }} 
-#          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-#          periodSeconds: {{ .Values.probe.period }} 
-#
+            path: {{ .Values.services.eis.healthUrl }}
+            port: {{ .Values.services.eis.ports.containerPort }}
+          periodSeconds: {{ .Values.probe.period }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        livenessProbe:
+          httpGet:
+            path: {{ .Values.services.eis.healthUrl }}
+            port: {{ .Values.services.eis.ports.containerPort }}
+          periodSeconds: {{ .Values.probe.livenessPeriod }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        startupProbe:
+          httpGet:
+            path: {{ .Values.services.eis.healthUrl }}
+            port: {{ .Values.services.eis.ports.containerPort }}
+          failureThreshold: {{ .Values.probe.failureThreshold }}
+          periodSeconds: {{ .Values.probe.startupPeriod }}
+
