--- a/deployment/sandbox-v2/helm/charts/regproc/templates/notification-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/notification-dep.yaml
@@ -55,16 +55,22 @@ spec:
           containerPort: {{ .Values.services.notification.ports.hazelcastPort }}
         - name: verticle-port
           containerPort: {{ .Values.services.notification.ports.containerPort }}
+        readinessProbe:
+          httpGet:
+            path: {{ .Values.services.notification.healthUrl }}
+            port: {{ .Values.services.notification.ports.containerPort }}
+          periodSeconds: {{ .Values.probe.period }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        livenessProbe:
+          httpGet:
+            path: {{ .Values.services.notification.healthUrl }}
+            port: {{ .Values.services.notification.ports.containerPort }}
+          periodSeconds: {{ .Values.probe.livenessPeriod }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        startupProbe:
+          httpGet:
+            path: {{ .Values.services.notification.healthUrl }}
+            port: {{ .Values.services.notification.ports.containerPort }}
+          failureThreshold: {{ .Values.probe.failureThreshold }}
+          periodSeconds: {{ .Values.probe.startupPeriod }}
 
-#        readinessProbe:
-#          httpGet:
-#            path: {{ .Values.services.notification.healthUrl }} 
-#            port: {{ .Values.services.notification.ports.containerPort }} 
-#          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-#          periodSeconds: {{ .Values.probe.period }} 
-#        livenessProbe:
-#          httpGet:
-#            path: {{ .Values.services.notification.healthUrl }} 
-#            port: {{ .Values.services.notification.ports.containerPort }} 
-#          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-#          periodSeconds: {{ .Values.probe.period }} 
