[PSA-36] added probes in ida
Conflicts:
	deployment/sandbox-v2/helm/charts/ida/templates/auth-dep.yaml
	deployment/sandbox-v2/helm/charts/ida/templates/internal-dep.yaml
	deployment/sandbox-v2/helm/charts/ida/templates/kyc-dep.yaml
	deployment/sandbox-v2/helm/charts/ida/templates/otp-dep.yaml

--- a/deployment/sandbox-v2/helm/charts/ida/templates/internal-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/ida/templates/internal-dep.yaml
@@ -54,19 +54,22 @@ spec:
         - name: JDK_JAVA_OPTIONS
           value: {{ $podconfig.java_opts }}
         ports:
-        - containerPort: {{ .Values.services.internal.containerPort }}
-        volumeMounts:
-
+        - containerPort: {{ .Values.services.internal.ports.containerPort }}
         readinessProbe:
           httpGet:
-            path: {{ .Values.services.internal.healthUrl }} 
-            port: {{ .Values.services.internal.containerPort }} 
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }} 
-#        livenessProbe:
-#          httpGet:
-#            path: {{ .Values.services.internal.healthUrl }} 
-#            port: {{ .Values.services.internal.containerPort }} 
-#          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-#          periodSeconds: {{ .Values.probe.period }}
-#
+            path: {{ .Values.services.internal.healthUrl }}
+            port: {{ .Values.services.internal.ports.containerPort }}
+          periodSeconds: {{ .Values.probe.period }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        livenessProbe:
+          httpGet:
+            path: {{ .Values.services.internal.healthUrl }}
+            port: {{ .Values.services.internal.ports.containerPort }}
+          periodSeconds: {{ .Values.probe.livenessPeriod }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        startupProbe:
+          httpGet:
+            path: {{ .Values.services.internal.healthUrl }}
+            port: {{ .Values.services.internal.ports.containerPort }}
+          failureThreshold: {{ .Values.probe.failureThreshold }}
+          periodSeconds: {{ .Values.probe.startupPeriod }}
