[PSA-36] added probes in idrepo
Conflicts:
	deployment/sandbox-v2/helm/charts/idrepo/templates/cred-req-dep.yaml
	deployment/sandbox-v2/helm/charts/idrepo/templates/cred-service-dep.yaml
	deployment/sandbox-v2/helm/charts/idrepo/templates/identity-dep.yaml
	deployment/sandbox-v2/helm/charts/idrepo/templates/vid-dep.yaml

--- a/deployment/sandbox-v2/helm/charts/idrepo/templates/ingress-file.yaml
+++ b/deployment/sandbox-v2/helm/charts/idrepo/templates/ingress-file.yaml
@@ -17,6 +17,6 @@ spec:
           service:
             name: {{ $service.serviceName }}
             port: 
-              number: {{ $service.servicePort }} 
+              number: {{ $service.ports.servicePort }} 
       {{- end }}
 
