--- a/deployment/sandbox-v2/helm/charts/idrepo/templates/cred-req-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/idrepo/templates/cred-req-dep.yaml
@@ -48,19 +48,22 @@ spec:
         - name: JDK_JAVA_OPTIONS
           value: {{ $podconfig.java_opts }}
         ports:
-        - containerPort: {{ .Values.services.credentialrequest.containerPort }}
-
-
+        - containerPort: {{ .Values.services.credentialrequest.ports.containerPort }}
         readinessProbe:
           httpGet:
-            path: {{ .Values.services.credentialrequest.healthUrl }} 
-            port: {{ .Values.services.credentialrequest.containerPort }} 
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }} 
- #       livenessProbe:
- #         httpGet:
- #           path: {{ .Values.services.credentialrequest.healthUrl }} 
- #           port: {{ .Values.services.credentialrequest.containerPort }} 
- #         initialDelaySeconds: {{ .Values.probe.initialDelay }} 
- #         periodSeconds: {{ .Values.probe.period }}
- #
+            path: {{ .Values.services.credentialrequest.healthUrl }}
+            port: {{ .Values.services.credentialrequest.ports.containerPort }}
+          periodSeconds: {{ .Values.probe.period }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        livenessProbe:
+          httpGet:
+            path: {{ .Values.services.credentialrequest.healthUrl }}
+            port: {{ .Values.services.credentialrequest.ports.containerPort }}
+          periodSeconds: {{ .Values.probe.livenessPeriod }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        startupProbe:
+          httpGet:
+            path: {{ .Values.services.credentialrequest.healthUrl }}
+            port: {{ .Values.services.credentialrequest.ports.containerPort }}
+          failureThreshold: {{ .Values.probe.failureThreshold }}
+          periodSeconds: {{ .Values.probe.startupPeriod }}
