--- a/deployment/sandbox-v2/helm/charts/admin/templates/hotlist-svc.yaml
+++ b/deployment/sandbox-v2/helm/charts/admin/templates/hotlist-svc.yaml
@@ -5,8 +5,8 @@ metadata:
   namespace: {{ .Release.Namespace }} 
 spec:
   ports:
-  - port: {{ .Values.services.hotlist.servicePort }}
-    targetPort: {{ .Values.services.hotlist.containerPort }}
+  - port: {{ .Values.services.hotlist.ports.servicePort }}
+    targetPort: {{ .Values.services.hotlist.ports.containerPort }}
   selector:
     app: {{ .Values.services.hotlist.serviceName }} 
 
